Fixed overlapping styling issue

--- a/src/Containers/SideSection/SideSection.scss
+++ b/src/Containers/SideSection/SideSection.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     width: 350px;
     min-width: 350px;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
     overflow: hidden;
     &.close{
         min-width: 0;
@@ -14,8 +14,9 @@
         min-width: 350px;        
     }
     .side-section-wrapper{
-        width: 350px;
+        width: 100%;
         height: 100%;
+        min-width: 350px;
     }
     .top-bar{
         width: 100%;
@@ -72,7 +73,7 @@
         overflow-y: auto;
         .card{
             margin: 10px 0;
-            padding: 2% 5%;
+            padding: 12px 30px;
             background-color: white;
             box-shadow: 0 0px 4px rgba(15, 34, 58, 0.12);
             .card-title{
